ipc/ipdl/test/ipdl/error/syncMessageCompress.ipdl
sync protocol syncMessageCompress {
parent:
    sync foo() compress;
};
